Fix blog spacing

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -257,6 +257,10 @@
 	}
 }
 
+.blog-view-header {
+	margin-bottom: 64px;
+}
+
 .blog-list {
 	list-style: none;
 	padding: 0;
@@ -264,10 +268,11 @@
 	h2 {
 		font-size: $blog-h2-size;
 		text-transform: lowercase;
+		margin-top: 0;
 	}
 
 	li {
-		margin: $blog-spacer 0;
+		margin: 0 0 $blog-spacer 0;
 	}
 
 	p {
@@ -302,6 +307,7 @@
 }
 
 // Blog view - Tablet & Desktop
+
 @media ( min-width: $screen-sm-min ) {
 	.blog-view {
 		margin-top: $blog-top-padding * 0.9;
@@ -309,7 +315,6 @@
 		// padding: $blog-top-padding 36px 36px 36px;
 	}
 	.blog-sidebar {
-		margin-top: $blog-spacer;
 		padding-left: 48px;
 		text-align: right;
 	}
@@ -319,7 +324,7 @@
 	.blog-title-push {
 		display: block !important;
 	}
-	.blog-view-header {
+	.blog-view-header-text {
 		padding-left: $blog-column-divider;
 		font-size: $screen-title-sm-and-above;
 	}
