--- a/assets/main.scss
+++ b/assets/main.scss
@@ -59,7 +59,7 @@ $border-radius-base:       	7px;
 $shadow-color:				#d6d8db;
 $blog-top-padding:			95px;
 $blog-post-padding:			$blog-top-padding;
-$blog-spacer:				64px;
+$blog-spacer:				80px;
 $blog-h2-size:				24px;
 $blog-column-divider:		24px;
 $blog-right-padding:		72px;
